--- a/web/src/app/game-page.html
+++ b/web/src/app/game-page.html
@@ -73,7 +73,7 @@
           // Move the dialog so it covers the whole screen
           if (event.detail.dialog) {
             this.appendChild(event.detail.dialog);
-            event.detail.dialog.openForCreate();
+            event.detail.dialog.open();
           }
         },
       });
